fix(tagwall): accommodate truncation in tags and list items

--- a/src/components/TagWall/_mixins.scss
+++ b/src/components/TagWall/_mixins.scss
@@ -14,5 +14,10 @@
 
   > #{$tag--interactive__namespace} {
     margin-right: $carbon--spacing-03;
+    max-width: 40ex;
+
+    &__button {
+      flex-shrink: 0;
+    }
   }
 }
